[package]
name = "tauri-plugin-ios-no-bounce"
version = "0.0.7"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-ios-no-bounce"

[dependencies]
tauri = { version = "2.0.0-beta.5" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.4", features = ["build"] }
